--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <img src="beets.jpg" alt="">
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
-    <p><time>55 to 65 days</time>are needed from germination to harvest of the root.</p>
+    <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-    <p>In fact, Jim Halpert once said this about beets,<q cite=" “Fact, bears eat beets. Bears, beets, Battlestar Galactica”"></q>.</p>
+    <p>In fact,Jim Halpert once said this about beets,<q cite="“Fact, bears eat beets. Bears, beets, Battlestar Galactica”"></q></p>
     <blockquote>
       <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
       <footer>- <cite>Chris Pratt</cite></footer>
@@ -36,16 +36,19 @@
         <li>Bull’s Blood</li>
         <li>Chioggia</li>
         <li>Detroit Dark Red</li>
-        <li>Early Wonder<</li>
+        <li>Early Wonder</li>
       </ol>
     <h2>Nutritional information</h2>
     <p>Serving size:<data value="">100 g</data></p>
     <dl>
       <dt>Energy</dt>
       <dd><data value="">180 kJ</data></dd>
-      Carbohydrates: 9.96 g
-      Fat: 0.18 g
-      Protein: 1.68 g
+      <dt>Carbohydrates:</dt>
+      <dd> <data value="">9.96 g</data></dd>
+      <dt>Fat:</dt>
+      <dd><data value="">0.18 g</data></dd>
+      <dt>Protein:</dt>
+       <dd><data value="">1.68 g</data></dd>
     </dl>
   </main>
 
@@ -61,7 +64,7 @@
   </aside>
 
   <footer>
-    <small>Source</small><a href="#">Wikipedia; Last modified:</a><time>Aug 30, 2014</time>
+    <small>Source</small><a href="#">Wikipedia; Last modified:</a>Aug 30, 2014>
   </footer>
 
 </body>
