--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </figure>
     <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-    <p>In fact,Jim Halpert once said this about beets,<q cite="“Fact, bears eat beets. Bears, beets, Battlestar Galactica”"></q></p>
+    <p>In fact,<cite>Jim Halpert</cite> once said this about beets,<q cite="">“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q></p>
     <blockquote>
       <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
       <footer>- <cite>Chris Pratt</cite></footer>
@@ -64,7 +64,7 @@
   </aside>
 
   <footer>
-    <small>Source</small><a href="#">Wikipedia; Last modified:</a>Aug 30, 2014>
+    <small>Source</small><a href="#">Wikipedia; Last modified:</a><time>Aug 30,2014</time>
   </footer>
 
 </body>
